--- a/src/components/Jobs/index.css
+++ b/src/components/Jobs/index.css
@@ -100,6 +100,7 @@
   justify-content: center;
   align-items: center;
   height: 50vh;
+  background-color: #121212;
 }
 
 .status-view-container {
